[package]
name = "converse"
version = "0.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.5"
actix-web = "0.6"
env_logger = "0.5"
diesel = { version = "1.2", features = ["postgres", "chrono", "r2d2"]}
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
r2d2 = "0.8"
futures = "0.1"
tera = "0.11"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
url = "1.7"
url_serde = "0.2"
reqwest = "0.8"
serde_json = "1.0"
hyper = "0.11"
rand = "0.4"
comrak = "0.2"
md5 = "0.3.7"
tokio = "0.1"
tokio-timer = "0.2"
pq-sys = "=0.4.4"

[build-dependencies]
pulldown-cmark = "0.1"
