[package]
name = "converse"
version = "0.1.0"
authors = ["Vincent Ambo <mail@tazj.in>"]
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.5"
actix-web = "0.6"
askama = "0.6"
chrono = { version = "0.4", features = ["serde"] }
comrak = "0.2"
diesel = { version = "1.2", features = ["postgres", "chrono", "r2d2"]}
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
hyper = "0.11"
log = "0.4"
md5 = "0.3.7"
mime_guess = "2.0.0-alpha"
pq-sys = "=0.4.4"
r2d2 = "0.8"
rand = "0.4"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-timer = "0.2"
url = "1.7"
url_serde = "0.2"

[build-dependencies]
pulldown-cmark = "0.1"
askama = "0.6"
